--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1" style="text-align: center;">
             {%- if site.slack.client_id -%}
-            <a href="https://slack.com/oauth/authorize?client_id={{ site.slack.client_id }}&scope=bot"><img alt="Add to Slack" height="45" width="145" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+            <a href="https://slack.com/oauth/authorize?scope=bot&client_id={{ site.slack.client_id }}"><img alt="Add to Slack" height="45" width="145" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
             {%- endif -%}
       </div>
 
