--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,6 +3,7 @@
   <title>{{ site.title }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" >
   {%- if site.slack.app_id -%}
   <meta name="slack-app-id" content="{{ site.slack.app_id }}">
   {%- endif -%}
